force-app/main/default/objects/Lineage__c/Lineage__c.object-meta.xml
<CustomObject>
    <label>Lineage</label>
    <nameField>
        <displayFormat>LE{000000}</displayFormat>
        <label>Lineage</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lineages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>