force-app/main/default/objects/Lineage__c/fields/Chemotype_ID__c.field-meta.xml
<CustomField>
    <fullName>Chemotype_ID__c</fullName>
    <formula>Strain__r.Chemotype_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chemotype ID</label>
    <type>Text</type>
</CustomField>