force-app/main/default/objects/Lineage__c/fields/Cultivation_Type__c.field-meta.xml
<CustomField>
    <fullName>Cultivation_Type__c</fullName>
    <formula>TEXT(Variety_Name__r.Cultivation_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cultivation Type</label>
    <type>Text</type>
</CustomField>