force-app/main/default/objects/Lineage__c/fields/Genotype_ID__c.field-meta.xml
<CustomField>
    <fullName>Genotype_ID__c</fullName>
    <formula>Strain__r.Genotype_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Genotype ID</label>
    <type>Text</type>
</CustomField>