force-app/main/default/objects/Lineage__c/fields/GTV_ID__c.field-meta.xml
<CustomField>
    <fullName>GTV_ID__c</fullName>
    <formula>Genotype_ID__c &amp;&quot;-&quot;&amp;Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Unique Lineage Identifier using Genotype ID and Variety ID</inlineHelpText>
    <label>GTV ID</label>
    <type>Text</type>
</CustomField>