force-app/main/default/objects/Lineage__c/fields/Phenotype_ID__c.field-meta.xml
<CustomField>
    <fullName>Phenotype_ID__c</fullName>
    <formula>Strain__r.Phenotype_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phenotype ID</label>
    <type>Text</type>
</CustomField>