force-app/main/default/objects/Lineage__c/fields/Producer__c.field-meta.xml
<CustomField>
    <fullName>Producer__c</fullName>
    <formula>Variety_Name__r.Producer_Name__r.DBA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Producer</label>
    <type>Text</type>
</CustomField>