force-app/main/default/objects/Lineage__c/fields/Strain__c.field-meta.xml
<CustomField>
    <fullName>Strain__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Strain</label>
    <referenceTo>Strain__c</referenceTo>
    <relationshipLabel>Lineages</relationshipLabel>
    <relationshipName>Lineages</relationshipName>
    <type>Lookup</type>
</CustomField>