force-app/main/default/objects/Lineage__c/fields/Variety_Description__c.field-meta.xml
<CustomField>
    <fullName>Variety_Description__c</fullName>
    <formula>Variety_Name__r.Description</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variety Description</label>
    <type>Text</type>
</CustomField>