force-app/main/default/objects/Lineage__c/fields/Variety_Name__c.field-meta.xml
<CustomField>
    <fullName>Variety_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Variety Name</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Lineages</relationshipLabel>
    <relationshipName>Lineages</relationshipName>
    <type>Lookup</type>
</CustomField>