force-app/main/default/objects/Lineage__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>GTV_ID__c</columns>
    <columns>Genotype_ID__c</columns>
    <columns>Phenotype_ID__c</columns>
    <columns>Chemotype_ID__c</columns>
    <columns>Variety_Name__c</columns>
    <columns>Strain__c</columns>
    <columns>Strain_Type__c</columns>
    <columns>Producer__c</columns>
    <columns>Cultivation_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>